# squink

./: CMakeLists.txt  LICENSE  readme.md
include/: squink.h
src/: log.c  log.h  squink.c
src/sinks/: base.c  base.h  console.h  file.h
test/: test.c
